Trun collaborator admin - doc / middleware
